# inkscape-pymath

./: .gitignore  LICENSE  README.md  latex_math.inx  main.py  pyproject.toml  test_formula.txt
inkscape_math_core/: latex_math.py
inkscape_math_core/latex2mathml/: __init__.py
inkscape_math_core/ziamath/: tex.py
inx/: math_formula.inx
scripts/: inkscape-pythonSelect-README.md  inkscape-pythonSelect.sh  install.sh  uninstall.sh
src/math_formula/: math_formula.py  renderer.py
src/math_formula_core/: math_formula.py  renderer.py  utils.py
tests/: test_renderer.py
